# TcMenuLog

./: CMakeLists.txt  README.md  keywords.txt  library.json  library.properties  platformio-test.ini  platformio.ini
.github/workflows/: platformio.yml
cmake/: CMakeLists.txt
examples/ioLogging/: ioLogging.ino
examples/textUtilities/: textUtilities.ino
src/: IoLogging.cpp  IoLogging.h  TcMenuLog.h  TextUtilities.cpp  TextUtilities.h
test/test_text_utils/: test_text_utils.cpp
